// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-columns-field Renders \`c-columns-field\` with custom props 1`] = `
<div
  class="layout column"
>
  <c-draggable-list-field-stub
    class=""
    handle=".column-drag-handle"
    value="[object Object],[object Object]"
  >
    <column-field-stub
      class="mb-3"
      column="[object Object]"
      draghandleclass="column-drag-handle"
      name="key-1"
      type="entity"
      withcolorindicator="true"
      withhtml="true"
      withtemplate="true"
    />
    <column-field-stub
      class="mb-3"
      column="[object Object]"
      draghandleclass="column-drag-handle"
      name="key-2"
      type="entity"
      withcolorindicator="true"
      withhtml="true"
      withtemplate="true"
    />
  </c-draggable-list-field-stub>
  <div
    class="flex"
  >
    <button
      class="mr-2 mx-0 v-btn theme--light primary"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Add
      </div>
    </button>
  </div>
</div>
`;

exports[`c-columns-field Renders \`c-columns-field\` with default props 1`] = `
<div
  class="layout column"
>
  <c-draggable-list-field-stub
    class="empty"
    handle=".column-drag-handle"
    value=""
  />
  <div
    class="flex"
  >
    <button
      class="mr-2 mx-0 v-btn theme--light primary"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Add
      </div>
    </button>
  </div>
</div>
`;
